--- a/realtics/src/App.css
+++ b/realtics/src/App.css
@@ -1,38 +1,75 @@
+body {
+  background-color: #222;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+#linearBackground {
+  background: linear-gradient(-45deg, #844da3, #663b94, #221c69, #080942);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  z-index: -999;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+}
+
 .App {
+  width: 100vw;
+}
+
+#searchContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+#title {
+  color: #eee;
+  font-size: 5rem;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+#searchBarContainer {
+  width: 100%;
+}
+
+#mainSearchBar {
+  border: none;
+  background-color: #666;
+  height: 3rem;
+  border-radius: 40px;
+  padding-left: 15px;
+  color: white;
+  width: 40vw;
+  height: 7vh;
+  font-size: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#mainSearchBar::placeholder {
+  color: #eee;
+  font-size: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  50% {
+      background-position: 100% 50%;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+      background-position: 0% 50%;
   }
 }
